--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
 
 /* Imgur Upload Style */
 
+.img {
+  margin-top: 0;
+    max-width: 80%;
+    max-height: 500px;
+}
 body.loading .loading-modal {
     display: block
 }
