--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,24 @@ body.loading .loading-modal {
 .img {
     width: 100%;
 }
+/* From cssbuttons.io by @adamgiebl */
+button,.btn {
+ background: #FBCA1F;
+ font-family: inherit;
+ padding: 0.6em 1.3em;
+ font-weight: 900;
+ font-size: 18px;
+ border: 3px solid black;
+ border-radius: 0.4em;
+ box-shadow: 0.1em 0.1em;
+}
+
+button:hover,.btn:hover {
+ transform: translate(-0.05em, -0.05em);
+ box-shadow: 0.15em 0.15em;
+}
+
+button:active,.btn:active {
+ transform: translate(0.05em, 0.05em);
+ box-shadow: 0.05em 0.05em;
+}
